<resources>
    <string name="app_name_release">Joblab</string>
    <string name="app_name_dev">Joblab (DEV)</string>
    <string name="internet_title">Sin Conexión a Internet</string>
    <string name="internet_message">Revise su conexión e intente nuevamente</string>
    <string name="internet_retry">Reintentar</string>
    <string name="internet_no_yet">Sin internet aún</string>
    <string name="et_hint_user_email">Correo electrónico</string>
    <string name="et_hint_user_password">Contraseña</string>
    <string name="bn_text_login">INICIAR SESIÓN</string>
    <string name="tv_password_forgot">Olvidé mi contraseña</string>
    <string name="bn_text_register">REGISTRARME</string>
    <string name="tv_title_candidate">CANDIDATO</string>
    <string name="text_minor"><![CDATA[<<]]></string>
    <string name="tv_postulation">Postulación</string>
    <string name="tv_authorization_message">Por favor antes de autorizar, revise detalladamente el Aviso de Privacidad y el Consentimiento Expreso, el cual explica el proceso al cual estará sujeto así como el uso de su información personal.</string>
    <string name="tv_register">Registro</string>
    <string name="tv_input_information_required">Por favor ingresa los datos solicitados y sigue. Los campos marcados con (*) son obligatorios.</string>
    <string name="tv_input_information">Por favor ingresa los datos solicitados y sigue.</string>
    <string name="et_hint_first_name">Primer nombre</string>
    <string name="et_hint_second_name">Segundo/tercer nombre</string>
    <string name="tv_authorization">Autorizo</string>
    <string name="bn_text_next">Siguiente</string>
    <string name="tv_message_postulation">Elige el puesto al que deseas postularte (máx. 3).</string>
    <string name="tv_positions">PUESTOS</string>
    <string name="tv_financial_information">INFORMACIÓN FINANCIERA</string>
    <string name="tv_input_and_save">Por favor ingresa los datos solicitados y guárdalos. <small><font>Los campos marcados con (*) son obligatorios.</font></small></string>
    <string name="tv_label_names">Nombre(s)*</string>
    <string name="tv_label_last_name">Apellido(s)*</string>
    <string name="et_hint_last_name">Primer apellido</string>
    <string name="et_hint_second_last_name">Segundo apellido</string>
    <string name="tv_label_information">Información*</string>
    <string name="et_hint_phone">Teléfono</string>
    <string name="et_hint_curp">CURP</string>
    <string name="et_hint_passport">Pasaporte o ID</string>
    <string name="bn_text_cancel">Cancelar</string>
    <string name="bn_text_accept">Aceptar</string>
    <string name="bn_text_save">Guardar</string>
    <string name="bn_text_edit">Editar</string>
    <string name="tv_personal_information">DATOS PERSONALES</string>
    <string name="tv_link_curp">De no conocer tu CURP ingresa a la siguiente link <a href="https://www.gob.mx/curp/">https://www.gob.mx/curp/</a> para consultarlo.</string>
    <string name="tv_national">Nacional</string>
    <string name="tv_foreign">Extranjero</string>
    <string name="tv_wrong_information_warning">Colocar datos incorrectos puede afectar tu proceso de selección.</string>
    <string name="tv_question_about_info">¿CONFIRMAS QUE TUS DATOS INGRESADOS SON CORRECTOS Y VERDADEROS?</string>
    <string name="tv_empty" />
    <string name="tv_step_one">1/8</string>
    <string name="tv_step_two">2/8</string>
    <string name="tv_step_three">3/8</string>
    <string name="tv_step_four">4/8</string>
    <string name="tv_step_five">5/8</string>
    <string name="tv_step_six">6/8</string>
    <string name="tv_step_seven">7/8</string>
    <string name="tv_step_eight">8/8</string>
    <string name="bn_text_yes">Sí</string>
    <string name="bn_text_yes_finish">Sí, finalizar</string>
    <string name="bn_text_no">No</string>
    <string name="tv_cp">C.P.*</string>
    <string name="et_cp">C.P.</string>
    <string name="tv_colonia">Colonia*</string>
    <string name="et_colonia">Colonia</string>
    <string name="tv_mcpio">Del./Mcpio.*</string>
    <string name="et_mcpio">Del./Mcpio.*</string>
    <string name="tv_state">Estado*</string>
    <string name="et_state">Extranjero</string>
    <string name="tv_calle">Calle*</string>
    <string name="et_calle">Calle</string>
    <string name="tv_ext">No. Ext.*</string>
    <string name="et_ext">No. Ext.</string>
    <string name="tv_int">No. Int.</string>
    <string name="et_int">No. Int.</string>
    <string name="tv_localization">DOMICILIO</string>
    <string name="tv_resumption">REANUDAR</string>
    <string name="bn_back">Anterior</string>
    <string name="tv_credit_bureau_message">La siguiente información es importante para tu proceso de selección, responde con sinceridad.</string>
    <string name="tv_birthday">Fecha de nacimiento*</string>
    <string name="tv_birthday_state">Estado de Nacimiento*</string>
    <string name="tv_gender">Sexo</string>
    <string name="tv_children">Hijos</string>
    <string name="tv_woman">Mujer</string>
    <string name="tv_man">Hombre</string>
    <string name="tv_automotive_credit">¿Has ejercido en los últimos 2 años un Crédito Bancario Automotriz?*</string>
    <string name="tv_yes">Si</string>
    <string name="tv_no">No</string>
    <string name="tv_mortgage_loan">¿Cuentas con Crédito Bancario Hipotecario?*</string>
    <string name="tv_credit_card">¿Cuentas con Tarjeta de Crédito expedida en territorio nacional?*</string>
    <string name="tv_step_4_validation_message">¿ESTÁS SEGURO QUE LA INFORMACIÓN QUE INGRESASTE ES CORRECTA?</string>
    <string name="tv_step_4_wrong_information_warning">Es muy importante para tu proceso de evaluación que la información que ingresas esté correcta.</string>
    <string name="tv_card_four_digits">> Indicar los últimos 4 dígitos de alguna de sus Tarjetas Bancarias.</string>
    <string name="tv_automotive_credit_validate">> ¿Has ejercido en los últimos 2 años un Crédito Bancario Automotriz?*</string>
    <string name="tv_mortgage_loan_validate">> ¿Cuentas con Crédito Bancario Hipotecario?*</string>
    <string name="tv_credit_card_validate">> ¿Cuentas con Tarjeta de Crédito expedida en territorio nacional?*</string>
    <string name="tv_life_style">ESTILO DE VIDA</string>
    <string name="tv_house">Casa*</string>
    <string name="tv_rented_house">Rentada</string>
    <string name="tv_own_house">Propia</string>
    <string name="tv_family">Familiar</string>
    <string name="tv_relatives_number">Incluyéndote, ¿cuántas personas viven en tu casa?</string>
    <string name="tv_pets">¿Tienes mascotas?*</string>
    <string name="tv_phones_number">¿Cuántos automóviles propios hay en tu casa?</string>
    <string name="tv_choose_services">Selecciona los servicios con los que cuentas</string>
    <string name="tv_light_service">Luz</string>
    <string name="tv_water_service">Agua</string>
    <string name="tv_phone_service">Teléfono</string>
    <string name="tv_tv_service">Cable</string>
    <string name="tv_gas_service">Gas</string>
    <string name="tv_internet_service">Internet</string>
    <string name="tv_choose_transfer_form">Selecciona la forma de traslado que más utilizas</string>
    <string name="tv_transport_on_foot">A pie</string>
    <string name="tv_transport_bicycle">Bicicleta</string>
    <string name="tv_transport_auto">Auto</string>
    <string name="tv_transport_public">Transporte público</string>
    <string name="tv_economic_dependants">¿Cuántas personas dependen económicamente de ti?</string>
    <string name="tv_number_credit_card">¿Cuántas tarjetas de crédito tienes?</string>
    <string name="tv_loan_requested">¿Has solicitado algún crédito o préstamo?*</string>
    <string name="tv_economic">ECONÓMICO</string>
    <string name="tv_academic_grade">Grado*</string>
    <string name="tv_institution">Institución*</string>
    <string name="tv_institution_short_name">Nombre corto</string>
    <string name="tv_profession">Especialidad\no Profesión*</string>
    <string name="tv_profession_hint">Especialidad/Profesión</string>
    <string name="tv_professional_id">Cédula Profesional</string>
    <string name="et_professional_id_hint">Ej. 7102007</string>
    <string name="tv_academic_title">ACADÉMICO</string>
    <string name="tv_first_job">¿Es tu primer empleo?*</string>
    <string name="tv_security_social_number">Número de Seguridad Social</string>
    <string name="tv_security_social_number_required">Número de Seguridad Social*</string>
    <string name="tv_work_experience">¿Tienes experiencia laboral?*</string>
    <string name="tv_working_now">¿Te encuentras laborando actualmente?</string>
    <string name="tv_company_name">Empresa*</string>
    <string name="et_company_name_hint">Nombre</string>
    <string name="tv_position_name">Puesto*</string>
    <string name="et_position_name_hint">Último puesto</string>
    <string name="tv_since_date">Desde*</string>
    <string name="et_since_date_hint">Mes/Año</string>
    <string name="tv_until_date">Hasta*</string>
    <string name="tv_last_boss_name">Nombre último jefe*</string>
    <string name="et_last_boss_name_hint">Nombre completo</string>
    <string name="tv_contact_info">Datos de contacto</string>
    <string name="et_contact_info_email_hint">Correo electrónico</string>
    <string name="et_contact_info_phone_hint">Teléfono</string>
    <string name="tv_not_social_media">No tengo redes sociales</string>
    <string name="tv_social_media">REDES SOCIALES</string>
    <string name="et_facebook_hint">Nickname/link/perfil/nombre de usuario</string>
    <string name="et_other">Otra</string>
    <string name="tv_register_confirmation">¿CONFIRMAS QUE TUS DATOS INGRESADOS SON CORRECTOS Y VERDADEROS?</string>
    <string name="bn_check_out">Revisar</string>
    <string name="bn_register_done">Sí, finalizar</string>
    <string name="tv_add_previous_jobs">Completar Referencia*</string>
    <string name="bn_text_add">Agregar</string>
    <string name="tv_job_references">REFERENCIAS LABORALES</string>
    <string name="previous_job_start_end">Desde <![CDATA[<b>%1$s</b>]]> hasta <![CDATA[<b>%2$s</b>]]></string>
    <string name="tv_camera">Cámara</string>
    <string name="tv_photo_album">Álbum de fotos</string>
    <string name="tv_cancel">Cancelar</string>
    <string name="tv_delete_photo">Eliminar Foto</string>
    <string name="tv_accutest_instruction_one">La prueba que está por realizar se divide en dos partes y no existe límite de tiempo.</string>
    <string name="tv_accutest_instruction_two">Asegúrese de poner atención al video de instrucciones que se muestra en la siguiente sección.</string>
    <string name="tv_accutest_instruction_three">Si usted está listo oprima aceptar</string>
    <string name="tv_title_incomplete_register">Registro complementario incompleto</string>
    <string name="tv_message_incomplete_register">Necesitas completar tu registro para comenzar a hacer tu evaluación</string>
    <string name="tv_message_complete_register">Completar Registro</string>
    <string name="ob_second_screen_get_badge">Consigue tu insignia</string>
    <string name="ob_second_screen_company">para que las empresas te</string>
    <string name="ob_second_screen_hired">contraten más fácilmente.</string>
    <string name="ob_second_screen_completed">Obtenla completando</string>
    <string name="ob_second_screen_profile">tu perfil al</string>
    <string name="ob_second_screen_hundred">100%</string>
    <string name="ob_third_screen_prequalify">Precalificate</string>
    <string name="ob_third_screen_test">con nuestra prueba</string>
    <string name="ob_third_screen_recomendation">Te decimos tus fortalezas, áreas de mejora y recomendaciones.</string>
    <string name="ob_fourth_screen_check_out">Revisa si alguna</string>
    <string name="ob_fourth_screen_company">empresa</string>
    <string name="ob_fourth_screen_keep_touch">quiere contactarte</string>
    <string name="bn_ob_fouth_screen">Continuar</string>
</resources>