<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.init.register.bottomsheet.ChooseCameraGalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_100"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/tv_camera"
            android:textColor="@color/black_800"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_photo_or_explorer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/tv_photo_album"
            android:textColor="@color/black_800"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tv_delete_photo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/tv_delete_photo"
            android:textColor="@color/black_800"
            android:textSize="20sp"
            android:visibility="gone" />

        <View
            android:id="@+id/v_delete"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/tv_cancel"
            android:textColor="@color/gray_500"
            android:textSize="20sp" />

    </LinearLayout>

</layout>