<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.init.splash.fragment.OnBoardingSecondScreenFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow_400">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_get_badge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/ob_second_screen_get_badge"
                android:textColor="@color/gray_750"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ob_second_screen_company"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_get_badge"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:id="@+id/tv_hired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ob_second_screen_hired"
                android:textColor="@color/gray_750"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_company"
                tools:layout_editor_absoluteX="8dp" />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:src="@drawable/ob_image_screen_two"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_hired"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/ob_second_screen_completed"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_image"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ob_second_screen_profile"
                android:textColor="@color/gray_750"
                android:textSize="33sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_completed"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ob_second_screen_hundred"
                android:textColor="@color/gray_750"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_profile"
                tools:layout_editor_absoluteX="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>