<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="9dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nexa_bold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/tv_title_incomplete_register"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/nexa_regular"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/tv_message_incomplete_register"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoEvaluation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_300"
            android:letterSpacing="0.02"
            android:text="@string/tv_message_complete_register"
            android:textAllCaps="false"
            android:textColor="@color/gray_600"
            android:textSize="18sp"
            android:theme="@style/Theme.MaterialComponents"
            app:cornerRadius="10dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>