<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.home.accutest.fragment.AccutestInstructionFragment">

    <data>

        <import type="com.intelab.joblab.R" />

        <variable
            name="viewModel"
            type="com.intelab.joblab.presentation.ui.home.accutest.viewmodels.AccutestInstructionViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_joblab_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/tv_accutest_instruction_one"
            android:textColor="@color/black_800"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:id="@+id/tv_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/tv_accutest_instruction_two"
            android:textColor="@color/black_800"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_one" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/tv_accutest_instruction_three"
            android:textColor="@color/black_800"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_two" />

        <Button
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginBottom="40dp"
            android:onClick="@{() -> viewModel.onAcceptClicked()}"
            android:paddingVertical="0dp"
            android:text="@string/bn_text_accept"
            android:textAllCaps="false"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:parallelogramBackground="@{R.color.green_300}"
            tools:background="@drawable/vw_shape_parallelogram" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>