<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.init.splash.fragment.OnBoardingThirdScreenFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yellow_400">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_prequalify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/ob_third_screen_prequalify"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:id="@+id/tv_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ob_third_screen_test"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_prequalify"
                tools:layout_editor_absoluteX="8dp" />

            <ImageView
                android:id="@+id/iv_accutest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ob_image_accutest_screen_three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_test"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ob_image_screen_three"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_accutest"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ob_third_screen_recomendation"
                android:textColor="@color/gray_750"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_image"
                tools:layout_editor_absoluteX="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>